--- a/pages/intro.html
+++ b/pages/intro.html
@@ -14,17 +14,17 @@
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>[Verschelde Siebert]</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>[98728]</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>[CMO-Bb]</dd>
     </dl>
     <p>
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>[festival tour]</p>
 </body>
 </html>
