--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -13,7 +13,7 @@
     <h1>Concurrentie analyse</h1>
     <h2>Rock Wechter</h2>
     <p>Het is een zeer drukke pagina waardoor het onorderlijk en te druk overkomt. Er wordt wel gebruik gemaakt van toffe kleuren.</p>
-    <img src="2018-03-27.png" alt="rock wechter">
+    <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-03-27.png">
     <br>
     <h2>Sziget</h2>
     <p></p>
