--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,10 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <h2> pieter 25 jaar</h2>
+    <p>Pieter is een hardwerkende man die graag reist en naar muziek luistert. Dit festival zal dan zeker een aanrader zijn voor pieter.</p>
+    <br>
+    <h2>Elise 19 jaar</h2>
+    <p>elise is een jonge dame die graag de wereld wilt ontdekken en dit op een sfeervolle manier.</p>
 </body>
 </html>
