--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -16,6 +16,11 @@
     <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-03-27.png">
     <br>
     <h2>Sziget</h2>
+    <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-03-27 (2).png">
+    <br>
+    <h2>Dour</h2>
+    Het laden kan soms wat langer duren. 
+    Bij sommige bladen heb je het gevoel dat nog niet alles is geladen.
     <p></p>
     
 </body>
