--- a/pages/intro.html
+++ b/pages/intro.html
@@ -25,7 +25,10 @@
     </p>
     
     <h1>Introductie</h1>
-    <p>[
-    Tetto Tour</p>
+    <p>Tetto Tour</p>
+    <p>De Tetto (italiaans voor dak) tour is een festifal die van dak tot dak gaat. Dit festival is verspreid over de kustlijn van Napoli waar je een fantastisch zicht hebt op de zee. Het festival duurdt 7 dagen, de concerten zelf worden enkel in de avond gegeven. De concerten worden enkel s'avonds gegeven omdat we de bezoekers ook warm willen maken om Italie bezoeken. De jongeren die de concerten willen bekijken verblijven in de hotels of huizen waarop de concerten worden gegeven. Er zijn ook dichtbijzijnde hotels ter beschikking voor de mensen die niet de volle 
+    7 dagen blijven. </p>
+    <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\dak.jpg">
+
 </body>
 </html>
