--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -11,9 +11,10 @@
 <body>
     <h1>Scenario's</h1>
     <h2> pieter 25 jaar</h2>
-    <p>Pieter is een hardwerkende man die graag reist en naar muziek luistert. Dit festival zal dan zeker een aanrader zijn voor pieter.</p>
+    <p>Pieter is een hardwerkende man die graag reist en naar muziek luistert. Doordat het festival overdag niet doorgaat heeft hij nog genoeg tijd om de prachtige steden in italie te bezoek. </p>
+    <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\776226cdea05c0718bccce4b8145bd00.jpg">
     <br>
     <h2>Elise 19 jaar</h2>
-    <p>elise is een jonge dame die graag de wereld wilt ontdekken en dit op een sfeervolle manier.</p>
+    <p>elise is een jonge dame die graag de wereld wilt ontdekken en dit op een sfeervolle manier. Ze houdt van muziek maar wil niet heel haar vakantie zich bezighouden met de concerten.</p>
 </body>
 </html>
