--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -11,10 +11,11 @@
 <body>
     <h1>Scenario's</h1>
     <h2> pieter 25 jaar</h2>
-    <p>Pieter is een hardwerkende man die graag reist en naar muziek luistert. Doordat het festival overdag niet doorgaat heeft hij nog genoeg tijd om de prachtige steden in italie te bezoek. Pieter wil op een vlotte en makkelijke manier zijn vakantie plannen. Met deze website wordt alles zo rap mogelijk afgehandelijk zodat je niet veel tijd verliest met het plannen van je reis.  </p>
+    <p>Pieter is een hardwerkende man die graag reist en naar muziek luistert. Doordat het festival overdag niet doorgaat heeft hij nog genoeg tijd om de prachtige steden in italie te bezoek. Pieter wil op een vlotte en makkelijke manier zijn vakantie plannen. Met deze website wordt alles zo rap mogelijk afgehandelijk zodat je niet veel tijd verliest met het plannen van je reis.   </p>
     <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\776226cdea05c0718bccce4b8145bd00.jpg">
     <br>
     <h2>Elise 19 jaar</h2>
     <p>elise is een jonge dame die graag de wereld wilt ontdekken en dit op een sfeervolle manier. Ze houdt van muziek maar wil niet heel haar vakantie zich bezighouden met de concerten.</p>
+    <p>Robbe is een 19 jarige die niet vertrouwd is met te het boeken van reiz via het internet. Met deze website is het de bedoeling dat hij vlug en simpel zijn vakantie kan boeken zonder enige problemen te ondervinden.  </p>
 </body>
 </html>
