--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -15,7 +15,7 @@
     <br>
     <h2>Elise 19 jaar</h2>
     <p>elise is een jonge dame die graag de wereld wilt ontdekken en dit op een sfeervolle manier. Ze houdt van muziek maar wil niet heel haar vakantie zich bezighouden met de concerten. Door deze site kan ze zich ook inschrijven voor een vakantiejob die wat te maken heeft met haar vakantie. </p>
-    <p>Robbe 19 jaar</p>
+    <h2>Robbe 19 jaar</h2>
     <p>Robbe is een 19 jarige die niet vertrouwd is met te het boeken van reis via het internet. Met deze website is het de bedoeling dat hij vlug en simpel zijn vakantie kan boeken zonder enige problemen te ondervinden. Robbe is een student die graag een centje zou willen bijverdienen. Hij zal kunnen kiezen om zich alleen in te schrijven voor te gaan werken.  </p>
 </body>
 </html>
