--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="css/pages.css">
 </head>
 <body>
-    <h1>Digital Styleguide</h1>
+  <h1 class= digi>Digital Styleguide</h1>
+  <div class= box>
+      <div class= box1>
+          <h2 class= digi> logo</h2>
+            <div class= logo>
+                <img src="images/logo.png" witdh="300" height="auto"/>
+            </div>
+      </div>
+  </div>
+    
 </body>
 </html>
