--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -18,6 +18,27 @@
             </div>
       </div>
   </div>
+  <div class= box2>
+      <h2 class= digi>kleuren</h2>
+        <div clas= kleuren>
+  <div class= kleur1><p>#4AD9A0<br>rgb(74,217,260)</p></div>
+  <div class= kleur2><p>#AE2525<br>rgb(174,37,37)</p></div>
+  <div class= kleur3><p>#E0D7D7<br>rgb(244,215,215)</p></div>
+  <div class= kleur4><p>#280F0F<br>rgb(40,15,15)</p></div>
+  <div class= kleur5><p>#B0DDCB<br>rgb(176,221,203)</p></div>
+  <div class= kleur6><p>#FFE922<br>rgb(255,233,34)</p></div>
+    </div>
+        </div>
     
+    
+        <div class= box3>
+            <h2 class= digi>iconen</h2>
+              <div clas= iconen>
+                  <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\logo 1.png" width="50" height="50"/>
+                  <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\logo 2.png" width="50" height="50"/>
+                  <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\logo 3.png" width="50" height="50"/>
+                  <img src="" width="50" height="50"/>
+                  <img src="" width="50" height="50"/>
+                  <img src="" width="50" height="50"/>
 </body>
 </html>
