--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -42,6 +42,6 @@
             <div class= box3>
                     <h2 class= digi>Navigatiebalk</h2>
                       <div clas= Navigatie>
-                            <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\Naamloos-1.png" width="50" height="50"/>
+                            <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\Naamloos-1.png" />
 </body>
 </html>
