--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -12,16 +12,17 @@
 <body>
     <h1>Concurrentie analyse</h1>
     <h2>Rock Wechter</h2>
-    <p>Het is een zeer drukke pagina waardoor het onorderlijk en te druk overkomt. Er wordt wel gebruik gemaakt van toffe kleuren. Voor mij was alles iets te chaotisch. sommige onderdelen laden iets te traag, zoals foto's of de namen van de artisten. De stijl van de website komt overl in terug.  </p>
+    <p>Het is een zeer drukke pagina waardoor het onorderlijk en te druk overkomt. Er wordt wel gebruik gemaakt van toffe kleuren. Voor mij was alles iets te chaotisch. sommige onderdelen laden iets te traag, zoals foto's of de namen van de artisten. De stijl van de website komt overal  terug.  </p>
     <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-03-27.png">
     <br>
     <h2>Sziget</h2>
     <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-03-27 (2).png">
+    <p>Het duurde eventjes vooraleer het programma van de main stage werd geladen. Dit heb ik ook gehad met het laden van de tickets,verblijf en extra. Dit zou niet mogen! Alles staat wel goed uitgelegd.</p>
     <br>
     <h2>Dour</h2>
     <img src="C:\Users\siebe\OneDrive\Documenten\GitHub\1718-nmd1-eo-siebert98\pages\images\2018-06-03 (2).png">
     <br>
-    <p>Het laden kan soms wat langer duren. Bij sommige bladen heb je het gevoel dat nog niet alles is geladen.</p>
+    <p>Het laden kan soms wat langer duren. Bij sommige bladen heb je het gevoel dat nog niet alles is geladen. Sommige teksten staan te klein, het wordt moeilijk om alles makelijk en snel te lezen. De home pagina is te druk. de belangrijke zaken staan te klein getypt.</p>
     
 </body>
 </html>
